# exchange

./: README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Cargo.toml  dev.dockerfile  prod.dockerfile
apps/backend/crates/services/web-server/: Cargo.toml
apps/backend/crates/services/web-server/src/: error.rs  main.rs
apps/backend/crates/services/web-server/src/web/routes/: mod.rs
apps/redis/: Dockerfile
apps/web/: dev.dockerfile  vite.config.ts
docs/: bots.md  spec.md
